# FileParser

./: .gitignore  CMakeLists.txt  FileParser.sln  FileParser.vcxproj  FileParser.vcxproj.filters  test.txt
Debug/: FileParser.vcxproj.FileListAbsolute.txt  vc143.idb
Debug/FileParser.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  FileParser.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
FileParser/Debug/: FileParser.exe.recipe  vc143.idb
FileParser/Debug/FileParser.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  FileParser.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
dependencies/simde/include/simde/x86/avx512/: cmp.h
include/: BitManipulationUtil.h  Bmp.h  Cli.h  Color.h  FileUtil.h  Huffman.hpp  Jpg.h  RenderWindow.h  Renderer.h  ShaderUtil.h  Shaders.h
include/Bmp/: BmpImage.h  BmpJpegConverter.h  BmpRenderer.h
include/FileParser/: BitManipulationUtil.h  ByteReader.hpp  Color.h  FileUtil.h  Image.hpp  Macros.hpp  Point.h  Shaders.h  Utils.hpp
include/FileParser/Bmp/: BmpImage.h  BmpJpegConverter.h  BmpRenderer.h  Encoder.hpp
include/FileParser/Gui/: RenderWindow.h  Renderer.h
include/FileParser/Huffman/: CodeSizes.hpp  Table.hpp
include/FileParser/Image/: Image.hpp
include/FileParser/Jpeg/: Decoder.hpp  HuffmanBuilder.hpp  HuffmanDecoder.hpp  HuffmanEncoder.hpp  JpegBitWriter.h  JpegBmpConverter.h  JpegEncoder.h  JpegImage.h  JpegRenderer.h  Markers.hpp  Mcu.hpp  QuantizationTable.hpp  QuantizationTableBuilder.hpp  Structures.hpp  Transform.hpp
include/Gui/: RenderWindow.h  Renderer.h
include/Jpeg/: HuffmanBuilder.hpp  HuffmanDecoder.hpp  HuffmanEncoder.hpp  JpegBitWriter.h  JpegBmpConverter.h  JpegEncoder.h  JpegImage.h  JpegRenderer.h
shaders/: Basic.frag  Basic.vert
src/: BitManipulationUtil.cpp  ByteReader.cpp  Cli.cpp  Color.cpp  FileParser.cpp  FileUtil.cpp  Huffman.cpp  Image.cpp  RenderWindow.cpp  Renderer.cpp  ShaderUtil.cpp  temp.txt
src/FileTypes/: Bmp.cpp  Jpg.cpp
src/FileTypes/Bmp/: BmpImage.cpp  BmpJpegConverter.cpp  BmpRenderer.cpp  Encoder.cpp
src/FileTypes/Jpeg/: Decoder.cpp  HuffmanBuilder.cpp  HuffmanDecoder.cpp  HuffmanEncoder.cpp  JpegBmpConverter.cpp  JpegEncoder.cpp  JpegImage.cpp  JpegRenderer.cpp  Mcu.cpp  QuantizationTable.cpp  QuantizationTableBuilder.cpp  Transform.cpp
src/Gui/: RenderWindow.cpp  Renderer.cpp
src/Huffman/: CodeSizes.cpp  CodeSizes.hpp  Table.cpp
x64/Debug/: FileParser.exe.recipe  FileParser.ilk  FileParser.vcxproj.FileListAbsolute.txt  vc143.idb
x64/Debug/FileParser.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  FileParser.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
